--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Yaosome</title>
 </head>
-<body>This is a yaosome app</body>
+<body>
+    <h2>Hang tight, this app is currently under maintenance.</h2>
+</body>
 </html>
